<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/deshboardid"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:src="@drawable/logo" />


                     <!--   <ImageView
                            android:id="@+id/deshboardid"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/circlebacground_color"
                            android:padding="10dp"
                            android:src="@drawable/logo" />-->

                        <TextView
                            android:id="@+id/dashboard_comnameid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:text="@string/company_name"
                            android:layout_toRightOf="@+id/deshboardid"
                            android:textColor="@color/text_color_green"
                            android:textStyle="bold"
                            android:layout_toEndOf="@+id/deshboardid" />
                        <TextView
                            android:id="@+id/dashboard_comadd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:layout_toRightOf="@+id/deshboardid"
                            android:layout_below="@+id/dashboard_comnameid"
                            android:textColor="@color/text_color_green"
                            android:text="@string/company_address1"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textStyle="italic"
                            android:layout_toEndOf="@+id/deshboardid" />
                        <TextView
                            android:id="@+id/dashboard_compostid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:layout_toRightOf="@+id/deshboardid"
                            android:layout_below="@+id/dashboard_comadd"
                            android:textColor="@color/text_color_green"
                            android:text="@string/company_address2"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textStyle="italic"
                            android:layout_toEndOf="@+id/deshboardid" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:layout_toRightOf="@+id/deshboardid"
                            android:layout_below="@+id/dashboard_compostid"
                            android:textColor="@color/text_color_green"
                            android:text="@string/company_address3"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textStyle="italic"
                            android:layout_toEndOf="@+id/deshboardid" />



                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/app_background_dark_blue" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_marginTop="3dp"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:weightSum="5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_weight="1"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_baseline_mail_outline_40"
                                android:layout_width="0dp"
                                android:layout_height="24dp" />

                            <TextView

                                android:textSize="18sp"
                                android:layout_weight="4"
                                android:textColor="@color/text_color_black"
                                android:text="@string/company_email"
                                android:layout_marginLeft="10dp"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content" />



                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginTop="3dp"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:weightSum="5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_weight="1"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_baseline_phone_40"
                                android:layout_width="0dp"
                                android:layout_height="24dp" />

                            <TextView

                                android:textSize="18sp"
                                android:layout_weight="4"
                                android:textColor="@color/text_color_black"
                                android:text="@string/company_phone2"
                                android:layout_marginLeft="10dp"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp" />



                        </LinearLayout>
                        <LinearLayout
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:weightSum="5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_weight="1"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_baseline_phone_40"
                                android:layout_width="0dp"
                                android:layout_height="24dp" />

                            <TextView
                                android:textSize="18sp"
                                android:layout_weight="4"
                                android:textColor="@color/text_color_black"
                                android:text="@string/company_phone3"
                                android:layout_marginLeft="10dp"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp" />



                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewadmin_Optino1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebacground_greencolor"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_product_40" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="PRODUCTS"
                        android:textAppearance="?android:textAppearanceButton"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewadmin_Optino2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebacground_greencolor"
                        android:padding="10dp"
                        android:src="@drawable/ic_add_shopping_cart_black_24dp" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Easy ORDER"
                        android:textAppearance="?android:textAppearanceButton"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewadmin_Optino3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebacground_greencolor"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_people_outline_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="REFERENCES"
                        android:textAppearance="?android:textAppearanceButton"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewadmin_Optino4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebacground_greencolor"
                        android:padding="10dp"
                        android:src="@drawable/ic_add_shopping_cart_black_24dp" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="MYORDERS"
                        android:textAppearance="?android:textAppearanceButton"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


        </LinearLayout>




    </ScrollView>


