<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_white"
    android:orientation="vertical"
    tools:context=".commission.CommissionWithdrawSuccessActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="50dp"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/linear_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/invoiceidtextid"
                android:orientation="vertical"
                android:background="@color/app_background_dark_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@id/invoiceimageid"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="3dp"
                        android:src="@drawable/logo"
                        android:layout_marginRight="5dp"
                        android:layout_width="60dp"
                        android:layout_height="60dp"/>

                    <TextView
                        android:id="@+id/companiid"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:layout_marginLeft="10dp"
                        android:textSize="24sp"
                        android:layout_toRightOf="@+id/invoiceimageid"
                        android:textColor="@color/text_color_white"
                        android:text="@string/company_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/invoiceimageid" />
                    <TextView
                        android:id="@+id/companyaddress1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:layout_marginLeft="10dp"
                        android:layout_below="@+id/companiid"
                        android:layout_toRightOf="@+id/invoiceimageid"
                        android:textColor="@color/text_color_white"
                        android:text="@string/company_address1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/invoiceimageid" />
                    <TextView
                        android:id="@+id/companyaddress2"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:layout_marginLeft="10dp"
                        android:layout_below="@+id/companyaddress1"
                        android:layout_toRightOf="@+id/invoiceimageid"
                        android:textColor="@color/text_color_white"
                        android:text="@string/company_address2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/invoiceimageid" />
                    <TextView
                        android:id="@+id/companyaddress3"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:layout_marginLeft="10dp"
                        android:layout_below="@+id/companyaddress2"
                        android:layout_toRightOf="@+id/invoiceimageid"
                        android:textColor="@color/text_color_white"
                        android:text="@string/company_address3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/invoiceimageid" />

                </RelativeLayout>



            </LinearLayout>


            <LinearLayout
                android:id="@+id/requstsuccessmsgid"
                android:layout_width="match_parent"
                android:layout_height="113dp"
                android:layout_below="@+id/invoiceidtextid"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:text="@string/commissionwithdrawsuccess"
                    android:textColor="@color/text_color_green"
                    android:textSize="20sp"
                    android:gravity="center_horizontal" />


            </LinearLayout>



            <LinearLayout
                android:layout_below="@+id/requstsuccessmsgid"
                android:id="@+id/requestdateid"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:text="Transaction Time "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/com_req_dateid"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:text="dd/mm/yyyy"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/transactionlinearid"
                android:orientation="vertical"
                android:layout_below="@+id/requestdateid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:text="Transaction ID :"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/com_req_transacid"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:text="#########"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/reqamount_linearid"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_below="@+id/transactionlinearid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:text="Request Amount (RM)"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/com_req__amountid"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:text="0.0"
                        android:layout_alignParentRight="true"
                        android:textAlignment="textEnd"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/reqcost_linearid"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_below="@+id/reqamount_linearid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Income Tax 2% (RM)"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/com_req__chargeid"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:text="0.0"
                        android:layout_alignParentRight="true"
                        android:textAlignment="textEnd"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/reqtotal_amount_linearid"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_below="@+id/reqcost_linearid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
                <RelativeLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/orderinvoicetextid12"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:text="Total Amount(RM)"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/com_req__totalamountid"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:text="0.0"
                        android:layout_alignParentRight="true"
                        android:textAlignment="textEnd"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
                <EditText
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
                <EditText
                    android:id="@+id/edittexid"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/reqtotal_amount_linearid"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_commissionfab_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:backgroundTint="@color/app_background_white"
                    android:src="@drawable/baseline_done_black_24dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="30dp"
                    android:contentDescription="TODO"
                    tools:targetApi="lollipop" />


            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>




</ScrollView>